# pingos

./: .gitignore  Cargo.toml  Makefile  build  x86_64-pingos.json
src/: graphics.rs  interrupt.rs  lib.rs  log.rs  main.rs  vga.rs
src/arch/x86_64/: boot.asm  grub.cfg  linker.ld  long_mode_init.asm  multiboot_header.asm
src/asm/: multiboot.asm
src/graphics/: mod.rs
src/graphics/color/: mod.rs
src/graphics/vga/: macros.rs  mod.rs  writer.rs
src/memory/: allocator.rs  mod.rs
src/memory/alloc/: fallocator.rs  mod.rs
src/memory/paging/: entry.rs  mod.rs  table.rs
