[package]
name = "pingos"
version = "0.1.0"
authors = ["lausek <root@lausek.eu>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0"
x86_64 = "0.1.2"
multiboot2 = "0.1.0"
spin = "0.4.5"
volatile = "0.2.3"

[dependencies.lazy_static]
version = "0.2.4"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
